@@ -113,6 +113,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - macbuild.sh: add work-in-progress PulseAudio bundling. Needs to be ripped
       apart and be redone, because dylibbundler is not smart enough to handle
       our case.
+    - macbuild.sh: add Linux library file name scheme regex as a precaution.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
